--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#referrals">Referrals</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
@@ -49,12 +52,34 @@
               <img class="card-img" src="img/paul.jpg" alt="Card image">
               <div class="card-img-overlay card-title-top-head">
                 <h1 class="card-title">Web developers that care</h1>
-                <p class="card-text">We'd like to see ourselves as an window between you, your business and the outer world.</p>
-                <p class="card-text">WHURTHAY web agency</p>
+                <p class="card-text">We'd like to see ourselves as a window between you, your business and the outer world.</p>
+                <p class="card-text">WHURTHAY web agency. We are here for you</p>
               </div>
           </div>
       </div>
     </header>
+
+    <section id="referrals">
+      <div class="container">
+        <div class="row">
+          <div class="col-8 mx-auto">
+            <h2>What do past clients has to say?</h2>
+            <blockquote class="blockquote">
+              <p class="mb-0">Ayush was always more than willing to complete any task assigned to him. Often he'd be given things outside of his immediate knowledge area. But he accepted those tasks and would be able to implement solutions.
+                The thing that I appreciated most was his ability to find & suggest a solution that was often better than the one originally thought of. Those actions saved us a lot of time & effort on various features.
+                ...
+                 I'd hire him again for future collaboration on JavaScript projects.</p>
+              <footer class="blockquote-footer">Justin Hamilton, <cite title="Source Title">Netmark</cite></footer>
+            </blockquote>
+            <hr>
+            <blockquote class="blockquote">
+              <p class="mb-0">Ayush is an excellent javascript and meteorjs developer. He built some excellent prototypes for me, quickly, responded well to my change requests and rather fluffy requirements. Will call on Ayush again, thanks :)</p>
+              <footer class="blockquote-footer">Bob, <cite title="Source Title">picWorkflow</cite></footer>
+            </blockquote>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section id="about">
       <div class="container">
