--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
     <!-- Bootstrap core CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" rel="stylesheet">
-
+    <!--Fonts -->
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    
     <!-- Custom styles for this template -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
 
@@ -34,6 +36,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#packages">Packages</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#services">Services</a>
@@ -63,17 +68,23 @@
       <div class="container">
         <div class="row">
           <div class="col-8 mx-auto">
-            <h2>What do past clients has to say?</h2>
+            <h2>What our past clients has to say?</h2>
             <blockquote class="blockquote">
-              <p class="mb-0">Ayush was always more than willing to complete any task assigned to him. Often he'd be given things outside of his immediate knowledge area. But he accepted those tasks and would be able to implement solutions.
+              <p class="mb-0">
+                  <i class="fa fa-quote-left fa-3x fa-pull-left fa-border" aria-hidden="true"></i>
+                Ayush was always more than willing to complete any task assigned to him. Often he'd be given things outside of his immediate knowledge area. But he accepted those tasks and would be able to implement solutions.
                 The thing that I appreciated most was his ability to find & suggest a solution that was often better than the one originally thought of. Those actions saved us a lot of time & effort on various features.
                 ...
-                 I'd hire him again for future collaboration on JavaScript projects.</p>
+                 I'd hire him again for future collaboration on JavaScript projects.
+                </p>
               <footer class="blockquote-footer">Justin Hamilton, <cite title="Source Title">Netmark</cite></footer>
             </blockquote>
             <hr>
             <blockquote class="blockquote">
-              <p class="mb-0">Ayush is an excellent javascript and meteorjs developer. He built some excellent prototypes for me, quickly, responded well to my change requests and rather fluffy requirements. Will call on Ayush again, thanks :)</p>
+              <p class="mb-0">
+                  <i class="fa fa-quote-left fa-3x fa-pull-left fa-border" aria-hidden="true"></i>
+                Ayush is an excellent javascript and meteorjs developer. He built some excellent prototypes for me, quickly, responded well to my change requests and rather fluffy requirements. Will call on Ayush again, thanks :)
+              </p>
               <footer class="blockquote-footer">Bob, <cite title="Source Title">picWorkflow</cite></footer>
             </blockquote>
           </div>
@@ -81,18 +92,86 @@
       </div>
     </section>
 
-    <section id="about">
+    <section id="about" class="bg-light">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>About WHURTHAY web agency</h2>
-            <p class="lead">WHURTHAY web agency consisits of a group of developers, designers and testers, who believe in web development not just as an art but a powerful method to convey you, our client's message to the world. We do it in the most beautiful way possible on the planet.</p>
+            <p class="lead">WHURTHAY web agency consisits of a group of developers, designers and testers, who believe in web development not just as an art but a powerful method to convey you, our client's message to the world. We do it in the most beautiful way possible on the planet. We build websites</p>
             <ul>
               <li>Working extensively to make your website/mobile app, express the emotions & the message that your company wants to say</li>
               <li>Bridge between you and the people who care enough to pay you for your services</li>
               <li>Don't take our word for it, Try our web development services, and see it for yourself</li>
               <li>All our websites and mobile apps developed by us, are made by keeping the user in mind, Highly responsive with breath-taking design</li>
             </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="packages">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 mx-auto">
+            <h2>Packages</h2>
+            <div class="row">
+              <div class="col-lg-4">
+                  <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="img/card1.jpg" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Website development + Google optimisation</h5>
+                      <p class="card-text">We build the website for you, and optimize your business on Google</p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">$2500</li>
+                        <li class="list-group-item">Website development</li>
+                      <li class="list-group-item">Optimize & SEO</li>
+                      <li class="list-group-item">Provide your own content/images</li>
+                    </ul>
+                    <div class="card-body">
+                      <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=5H2VH65A8R2KQ" class="card-link">Buy now</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="img/card2.jpg" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Content development + integrate relevant images</h5>
+                        <p class="card-text">Couduct a 45 min interview & build your content</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                          <li class="list-group-item">$1000</li>
+                          <li class="list-group-item">Build the website content</li>
+                        <li class="list-group-item">Search/integrate stock photos</li>
+                        <li class="list-group-item">Conduct an interview, getting to know your business better</li>
+                      </ul>
+                      <div class="card-body">
+                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=FTF583P89LMAU" class="card-link">Buy now</a>
+                      </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" src="img/card3.jpg" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Site maintenance</h5>
+                        <p class="card-text">Website hosting + domain registraion</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li class="list-group-item">$1500/year</li>
+                        <li class="list-group-item">Free website hosting</li>
+                        <li class="list-group-item">Register domain every year</li>
+                        <li class="list-group-item">Free minor updates each year</li>
+                      </ul>
+                      <div class="card-body">
+                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=E8KRYM642XWJA" class="card-link">Buy now</a>
+                      </div>
+                    </div>
+                </div>
+            </div>
+            <h4>What's best for me?</h4>
+            <p class="lead">You can either purchase all of the above packages for $5000, if you'd like us to build the website from the ground up and maintain it for the first year. or, if you already have the content, you can purchase the website development and site maintainence package for $4000, or if you have the content, and the hosting/domain registration taken care of, then you can just buy the $2500 website development package, and we will provide a guide on how to host the website and register a domain. Maintainence cost is $1500 every year, which includes free website hosting and domain updation/re-registration. If you need somebody to talk to, <a href="#contact" class="js-scroll-trigger">Contact us</a> </p>
           </div>
         </div>
       </div>
@@ -116,7 +195,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Contact us</h2>
-            <p class="lead">We are located in the beautiful city of Auckland, New Zealand. Contact us on <a href="mailto:agency@whurthay.com" target="_blank">agency@whurthay.com</a>, to get to know more about us, and explain to us your current circumstances and discuss your development needs. We are all ears. </p>
+            <p class="lead">We are located in the beautiful city of Auckland, New Zealand. Contact us on <a href="mailto:agency@whurthay.com" target="_blank">agency@whurthay.com</a>, to get to know more about us, and explain to us your current circumstances and discuss your development needs. We are all ears. You can also call Ayush at +64-02102492207</p>
           </div>
         </div>
       </div>
