--- a/index.html
+++ b/index.html
@@ -123,13 +123,17 @@
                       <p class="card-text">We build the website for you, and optimize your business on Google</p>
                     </div>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">$2500</li>
+                        <li class="list-group-item text-primary">$2500</li>
                         <li class="list-group-item">Website development</li>
                       <li class="list-group-item">Optimize & SEO</li>
                       <li class="list-group-item">Provide your own content/images</li>
                     </ul>
                     <div class="card-body">
-                      <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=5H2VH65A8R2KQ" class="card-link">Buy now</a>
+                      <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=5H2VH65A8R2KQ" class="card-link">
+                        <span class="btn btn-primary">
+                            Buy now <i class="fa fa-lock" aria-hidden="true"></i>
+                        </span>
+                      </a>
                     </div>
                   </div>
                 </div>
@@ -141,13 +145,17 @@
                         <p class="card-text">Couduct a 45 min interview & build your content</p>
                       </div>
                       <ul class="list-group list-group-flush">
-                          <li class="list-group-item">$1000</li>
+                          <li class="list-group-item text-primary">$1000</li>
                           <li class="list-group-item">Build the website content</li>
                         <li class="list-group-item">Search/integrate stock photos</li>
                         <li class="list-group-item">Conduct an interview, getting to know your business better</li>
                       </ul>
                       <div class="card-body">
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=FTF583P89LMAU" class="card-link">Buy now</a>
+                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=FTF583P89LMAU" class="card-link">
+                          <span class="btn btn-primary">
+                              Buy now <i class="fa fa-lock" aria-hidden="true"></i>
+                          </span>
+                        </a>
                       </div>
                     </div>
                 </div>
@@ -159,13 +167,17 @@
                         <p class="card-text">Website hosting + domain registraion</p>
                       </div>
                       <ul class="list-group list-group-flush">
-                        <li class="list-group-item">$1500/year</li>
+                        <li class="list-group-item text-primary">$1500/year</li>
                         <li class="list-group-item">Free website hosting</li>
                         <li class="list-group-item">Register domain every year</li>
                         <li class="list-group-item">Free minor updates each year</li>
                       </ul>
                       <div class="card-body">
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=E8KRYM642XWJA" class="card-link">Buy now</a>
+                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=E8KRYM642XWJA" class="card-link">
+                          <span class="btn btn-primary">
+                              Buy now <i class="fa fa-lock" aria-hidden="true"></i>
+                          </span>
+                        </a>
                       </div>
                     </div>
                 </div>
