--- a/index.html
+++ b/index.html
@@ -207,6 +207,25 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Contact us</h2>
+            <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+            integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+            crossorigin=""/>
+             <!-- Make sure you put this AFTER Leaflet's CSS -->
+            <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+            integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+            crossorigin=""></script>
+            <div id="mapid" style="height: 280px;"></div>
+            <script>
+              var mymap = L.map('mapid').setView([-36.8638369,174.6109393,17], 13);
+              L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                  attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors',
+                  maxZoom: 18,
+                  id: 'mapbox.streets',
+                  accessToken: 'your.mapbox.access.token'
+              }).addTo(mymap);
+              var marker = L.marker([-36.8638369,174.6109393,17]).addTo(mymap);
+              marker.bindPopup("<b>Whurthay web agency</b><p>Rakich place,<br>Henderson, Auckland,<br>New Zealand, 0612<br>+64-02102492207<br>agency@whurthay.com</p>").openPopup();
+            </script>
             <p class="lead">We are located in the beautiful city of Auckland, New Zealand. Contact us on <a href="mailto:agency@whurthay.com" target="_blank">agency@whurthay.com</a>, to get to know more about us, and explain to us your current circumstances and discuss your development needs. We are all ears. You can also call Ayush at +64-02102492207</p>
           </div>
         </div>
