--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
                 <h1 class="card-title">Web developers that care</h1>
                 <p class="card-text">We'd like to see ourselves as a window between you, your business and the outer world.</p>
                 <p class="card-text">WHURTHAY web agency. We are here for you</p>
+                <p>
+                  <a href="#packages" class="js-scroll-trigger">
+                      <button class="btn btn-light btn-lg">Packages</button>
+                  </a> 
+                </p>
               </div>
           </div>
       </div>
