--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                 <p>
                   <a href="#packages" class="js-scroll-trigger">
                       <button class="btn btn-light btn-lg">Packages</button>
+                      <a href="https://goo.gl/forms/iCwTMRgPktRs6vWl2" target="_blank">
+                        <button class="btn btn-danger btn-lg">Message</button>
+                      </a>
                   </a> 
                 </p>
               </div>
@@ -147,7 +150,7 @@
                       <img class="card-img-top" src="img/card2.jpg" alt="Card image cap">
                       <div class="card-body">
                         <h5 class="card-title">Content development + integrate relevant images</h5>
-                        <p class="card-text">Couduct a 45 min interview & build your content</p>
+                        <p class="card-text">Conduct a 45 min interview & build your content</p>
                       </div>
                       <ul class="list-group list-group-flush">
                           <li class="list-group-item text-primary">$1000</li>
@@ -173,7 +176,7 @@
                       </div>
                       <ul class="list-group list-group-flush">
                         <li class="list-group-item text-primary">$1500/year</li>
-                        <li class="list-group-item">Free website hosting</li>
+                        <li class="list-group-item">Website hosting</li>
                         <li class="list-group-item">Register domain every year</li>
                         <li class="list-group-item">Free minor updates each year</li>
                       </ul>
@@ -186,9 +189,36 @@
                       </div>
                     </div>
                 </div>
+                <div class="col-lg-4">
+                  <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="img/card4.jpg" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Complete website</h5>
+                      <p class="card-text">Website development + content development + Website hosting + domain registration</p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item text-primary">$5000</li>
+                      <li class="list-group-item">Website development from scratch</li>
+                      <li class="list-group-item">Content development</li>
+                      <li class="list-group-item">Website hosting & maintainence</li>
+                      <li class="list-group-item">Domain registration & maintainence</li>
+                    </ul>
+                    <div class="card-body">
+                      <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=X6RA7JM57D7AN" class="card-link">
+                        <span class="btn btn-primary">
+                            Buy now <i class="fa fa-lock" aria-hidden="true"></i>
+                        </span>
+                      </a>
+                    </div>
+                  </div>
+              </div>
+              <div class="col-lg-8 container">
+                <h4 class="mt-4">What's best for me?</h4>
+                <p class="lead">You can either purchase all of the above packages for $5000(from the left, complete website package), if you'd like us to build the website from the ground up and maintain it for the first year. or, if you already have the content, you can purchase the website development and site maintainence package for $4000, or if you have the content, and the hosting/domain registration taken care of, then you can just buy the $2500 website development package, and we will provide a guide on how to host the website and register a domain. Maintainence cost is $1500 every year, which includes free website hosting and domain updation/re-registration. <br><br> If you need somebody to talk to, <br><a href="https://goo.gl/forms/iCwTMRgPktRs6vWl2" target="_blank">
+                  <button class="btn btn-danger btn-lg">Message us</button>
+                </a> </p>
+              </div>
             </div>
-            <h4>What's best for me?</h4>
-            <p class="lead">You can either purchase all of the above packages for $5000, if you'd like us to build the website from the ground up and maintain it for the first year. or, if you already have the content, you can purchase the website development and site maintainence package for $4000, or if you have the content, and the hosting/domain registration taken care of, then you can just buy the $2500 website development package, and we will provide a guide on how to host the website and register a domain. Maintainence cost is $1500 every year, which includes free website hosting and domain updation/re-registration. If you need somebody to talk to, <a href="#contact" class="js-scroll-trigger">Contact us</a> </p>
           </div>
         </div>
       </div>
