--- a/index.html
+++ b/index.html
@@ -261,7 +261,10 @@
               var marker = L.marker([-36.8638369,174.6109393,17]).addTo(mymap);
               marker.bindPopup("<b>Whurthay web agency</b><p>Rakich place,<br>Henderson, Auckland,<br>New Zealand, 0612<br>+64-02102492207<br>agency@whurthay.com</p>").openPopup();
             </script>
-            <p class="lead">We are located in the beautiful city of Auckland, New Zealand. Contact us on <a href="mailto:agency@whurthay.com" target="_blank">agency@whurthay.com</a>, to get to know more about us, and explain to us your current circumstances and discuss your development needs. We are all ears. You can also call Ayush at +64-02102492207</p>
+            <p class="lead">We are located in the beautiful city of Auckland, New Zealand. Contact us on <a href="mailto:agency@whurthay.com" target="_blank">agency@whurthay.com</a>, to get to know more about us, and explain to us your current circumstances and discuss your development needs. We are all ears. 
+              <br><a href="https://goo.gl/forms/iCwTMRgPktRs6vWl2" target="_blank">
+              <button class="btn btn-danger btn-lg">Message Us</button>
+            </a></p>
           </div>
         </div>
       </div>
