--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <div class="card-img-overlay card-title-top-head">
                 <h1 class="card-title">Web developers that care</h1>
                 <p class="card-text">We'd like to see ourselves as a window between you, your business and the outer world.</p>
-                <p class="card-text">WHURTHAY web agency. We are here for you</p>
+                <p class="card-text">To get your website in a <span class="text-danger">week</span>. Message us</p>
                 <p>
                   <a href="#packages" class="js-scroll-trigger">
                       <button class="btn btn-light btn-lg">Packages</button>
