--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="https://goo.gl/forms/iCwTMRgPktRs6vWl2" target="_blank">
+                <button class="btn btn-danger btn-sm">Get a Free Quote</button>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
@@ -57,13 +62,11 @@
               <img class="card-img" src="img/paul.jpg" alt="Card image">
               <div class="card-img-overlay card-title-top-head">
                 <h1 class="card-title">Web developers that care</h1>
-                <p class="card-text">We'd like to see ourselves as a window between you, your business and the outer world.</p>
-                <p class="card-text">To get your website in a <span class="text-danger">week</span>. Message us</p>
+                <p class="card-text">We deliver your website in a <span class="text-warning">week</span></p>
                 <p>
                   <a href="#packages" class="js-scroll-trigger">
-                      <button class="btn btn-light btn-lg">Packages</button>
                       <a href="https://goo.gl/forms/iCwTMRgPktRs6vWl2" target="_blank">
-                        <button class="btn btn-danger btn-lg">Message</button>
+                        <button class="btn btn-danger btn-lg">Get a Free Quote</button>
                       </a>
                   </a> 
                 </p>
@@ -215,7 +218,7 @@
               <div class="col-lg-8 container">
                 <h4 class="mt-4">What's best for me?</h4>
                 <p class="lead">You can either purchase all of the above packages for $5000(from the left, complete website package), if you'd like us to build the website from the ground up and maintain it for the first year. or, if you already have the content, you can purchase the website development and site maintainence package for $4000, or if you have the content, and the hosting/domain registration taken care of, then you can just buy the $2500 website development package, and we will provide a guide on how to host the website and register a domain. Maintainence cost is $1500 every year, which includes free website hosting and domain updation/re-registration. <br><br> If you need somebody to talk to, <br><a href="https://goo.gl/forms/iCwTMRgPktRs6vWl2" target="_blank">
-                  <button class="btn btn-danger btn-lg">Message us</button>
+                  <button class="btn btn-danger btn-lg">Get a Free Quote</button>
                 </a> </p>
               </div>
             </div>
@@ -263,7 +266,7 @@
             </script>
             <p class="lead">We are located in the beautiful city of Auckland, New Zealand. Contact us on <a href="mailto:agency@whurthay.com" target="_blank">agency@whurthay.com</a>, to get to know more about us, and explain to us your current circumstances and discuss your development needs. We are all ears. 
               <br><a href="https://goo.gl/forms/iCwTMRgPktRs6vWl2" target="_blank">
-              <button class="btn btn-danger btn-lg">Message Us</button>
+              <button class="btn btn-danger btn-lg">Get a Free Quote</button>
             </a></p>
           </div>
         </div>
