--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <img class="card-img" src="img/paul.jpg" alt="Card image">
               <div class="card-img-overlay card-title-top-head">
                 <h1 class="card-title">Web developers that care</h1>
-                <p class="card-text">We deliver your website in a <span class="text-warning">week</span></p>
+                <p class="card-text text-warning">We deliver your website in a week</p>
                 <p>
                   <a href="#packages" class="js-scroll-trigger">
                       <a href="https://goo.gl/forms/iCwTMRgPktRs6vWl2" target="_blank">
