--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <header class="bg-primary text-white">
       <div class="container text-center">
           <div class="card bg-dark text-white">
-              <img class="card-img" src="img/paul.jpg" alt="Card image">
+              <img class="card-img" src="img/paul1.jpg" alt="Card image">
               <div class="card-img-overlay card-title-top-head">
                 <h1 class="card-title">Web developers that care</h1>
                 <p class="card-text text-warning">We deliver your website in a week</p>
@@ -126,72 +126,6 @@
           <div class="col-12 mx-auto">
             <h2>Packages</h2>
             <div class="row">
-              <div class="col-lg-4">
-                  <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="img/card1.jpg" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Website development + Google optimisation</h5>
-                      <p class="card-text">We build the website for you, and optimize your business on Google</p>
-                    </div>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item text-primary">$2500</li>
-                        <li class="list-group-item">Website development</li>
-                      <li class="list-group-item">Optimize & SEO</li>
-                      <li class="list-group-item">Provide your own content/images</li>
-                    </ul>
-                    <div class="card-body">
-                      <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=5H2VH65A8R2KQ" class="card-link">
-                        <span class="btn btn-primary">
-                            Buy now <i class="fa fa-lock" aria-hidden="true"></i>
-                        </span>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card" style="width: 18rem;">
-                      <img class="card-img-top" src="img/card2.jpg" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title">Content development + integrate relevant images</h5>
-                        <p class="card-text">Conduct a 45 min interview & build your content</p>
-                      </div>
-                      <ul class="list-group list-group-flush">
-                          <li class="list-group-item text-primary">$1000</li>
-                          <li class="list-group-item">Build the website content</li>
-                        <li class="list-group-item">Search/integrate stock photos</li>
-                        <li class="list-group-item">Conduct an interview, getting to know your business better</li>
-                      </ul>
-                      <div class="card-body">
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=FTF583P89LMAU" class="card-link">
-                          <span class="btn btn-primary">
-                              Buy now <i class="fa fa-lock" aria-hidden="true"></i>
-                          </span>
-                        </a>
-                      </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card" style="width: 18rem;">
-                      <img class="card-img-top" src="img/card3.jpg" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title">Site maintenance</h5>
-                        <p class="card-text">Website hosting + domain registraion</p>
-                      </div>
-                      <ul class="list-group list-group-flush">
-                        <li class="list-group-item text-primary">$1500/year</li>
-                        <li class="list-group-item">Website hosting</li>
-                        <li class="list-group-item">Register domain every year</li>
-                        <li class="list-group-item">Free minor updates each year</li>
-                      </ul>
-                      <div class="card-body">
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=E8KRYM642XWJA" class="card-link">
-                          <span class="btn btn-primary">
-                              Buy now <i class="fa fa-lock" aria-hidden="true"></i>
-                          </span>
-                        </a>
-                      </div>
-                    </div>
-                </div>
                 <div class="col-lg-4">
                   <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="img/card4.jpg" alt="Card image cap">
@@ -220,6 +154,72 @@
                 <p class="lead">You can either purchase all of the above packages for $5000(from the left, complete website package), if you'd like us to build the website from the ground up and maintain it for the first year. or, if you already have the content, you can purchase the website development and site maintainence package for $4000, or if you have the content, and the hosting/domain registration taken care of, then you can just buy the $2500 website development package, and we will provide a guide on how to host the website and register a domain. Maintainence cost is $1500 every year, which includes free website hosting and domain updation/re-registration. <br><br> If you need somebody to talk to, <br><a href="https://goo.gl/forms/iCwTMRgPktRs6vWl2" target="_blank">
                   <button class="btn btn-danger btn-lg">Get a Free Quote</button>
                 </a> </p>
+              </div>
+              <div class="col-lg-4">
+                <div class="card" style="width: 18rem;">
+                  <img class="card-img-top" src="img/card1.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Website development + Google optimisation</h5>
+                    <p class="card-text">We build the website for you, and optimize your business on Google</p>
+                  </div>
+                  <ul class="list-group list-group-flush">
+                      <li class="list-group-item text-primary">$2500</li>
+                      <li class="list-group-item">Website development</li>
+                    <li class="list-group-item">Optimize & SEO</li>
+                    <li class="list-group-item">Provide your own content/images</li>
+                  </ul>
+                  <div class="card-body">
+                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=5H2VH65A8R2KQ" class="card-link">
+                      <span class="btn btn-primary">
+                          Buy now <i class="fa fa-lock" aria-hidden="true"></i>
+                      </span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                  <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="img/card2.jpg" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Content development + integrate relevant images</h5>
+                      <p class="card-text">Conduct a 45 min interview & build your content</p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item text-primary">$1000</li>
+                        <li class="list-group-item">Build the website content</li>
+                      <li class="list-group-item">Search/integrate stock photos</li>
+                      <li class="list-group-item">Conduct an interview, getting to know your business better</li>
+                    </ul>
+                    <div class="card-body">
+                      <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=FTF583P89LMAU" class="card-link">
+                        <span class="btn btn-primary">
+                            Buy now <i class="fa fa-lock" aria-hidden="true"></i>
+                        </span>
+                      </a>
+                    </div>
+                  </div>
+              </div>
+              <div class="col-lg-4">
+                  <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="img/card3.jpg" alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Site maintenance</h5>
+                      <p class="card-text">Website hosting + domain registraion</p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                      <li class="list-group-item text-primary">$1500/year</li>
+                      <li class="list-group-item">Website hosting</li>
+                      <li class="list-group-item">Register domain every year</li>
+                      <li class="list-group-item">Free minor updates each year</li>
+                    </ul>
+                    <div class="card-body">
+                      <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=E8KRYM642XWJA" class="card-link">
+                        <span class="btn btn-primary">
+                            Buy now <i class="fa fa-lock" aria-hidden="true"></i>
+                        </span>
+                      </a>
+                    </div>
+                  </div>
               </div>
             </div>
           </div>
