--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
       </div>
     </nav>
 
-    <header class="bg-primary text-white">
+    <header class="bg-primary">
       <div class="container text-center">
           <div class="card bg-dark text-white">
-              <img class="card-img" src="img/paul1.jpg" alt="Card image">
+              <img class="card-img card-image" src="img/paul.jpg" alt="Card image">
               <div class="card-img-overlay card-title-top-head">
                 <h1 class="card-title">Web developers that care</h1>
-                <p class="card-text text-warning">We deliver your website in a week</p>
+                <p class="card-text">We deliver your website in a week</p>
                 <p>
                   <a href="#packages" class="js-scroll-trigger">
                       <a href="https://goo.gl/forms/iCwTMRgPktRs6vWl2" target="_blank">
