--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="">
 
   <title>Whurthay Web Agency</title>
+  <link rel="icon" href="./img/logo.png" type="image/png">
 
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -71,7 +72,7 @@
         <div class="col-lg-10 mx-auto">
           <h2>We provide web solutions to turn your business online</h2>
           <p class="lead mb-5">We specialize in building websites and mobile applications</p>
-          <a class="btn btn-danger btn-xl js-scroll-trigger" href="https://goo.gl/forms/iCwTMRgPktRs6vWl2">Get Free Quote</a>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#services">What we offer</a>
         </div>
       </div>
     </div>
