--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <h4>
             <strong>Year long maintenance</strong>
           </h4>
-          <p class="text-faded mb-0">We make free changes for the whole year</p>
+          <p class="text-faded mb-0">We make free updates for the whole year</p>
         </div>
       </div>
     </div>
